--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -60,6 +60,10 @@
                     <pre>{{ recipe.note }}</pre>
                 </div>
             </div>
+            <br/>
+            <div class="offset-lg-10">
+                <a href="{{ path('blog_update', { id: recipe.id }) }}" class="btn readRecipe-modifyButton">Modifier la recette</a>
+            </div>
         </div>
 
     <br/>
