--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Blog de Recettes{% endblock %}</title>
         {% block stylesheets %}
+            <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.png') }}" />
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
             <link type="text/css" rel="stylesheet" href="{{ asset('css/style.css') }}" />
@@ -13,7 +14,7 @@
     <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-website" style="background-color: #007bff;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{  path('index') }}"><img src="{{ asset('images/logo_v1.png') }}" class="websiteLogo" alt="websiteLogo"></a>
+            <a class="navbar-brand" href="{{  path('index') }}"><img src="{{ asset('images/logo_v2.png') }}" class="websiteLogo" alt="websiteLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
