--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -43,20 +43,15 @@
 
             {% for recipe in recipes %}
                 <div class="col-4 mb-3">
-                    <div class="card card-recipeList">
-                        <div class="card-header d-flex justify-content-between">
-                            <span class="recipeList_titleCard">{{ recipe.title }}</span>
-                            <span class="recipeList_categoryCard">{{ recipe.category.name|capitalize }}</span>
+                    <a class="recipeList_linkCard" href="{{ path('blog_read', { id: recipe.id }) }}">
+                        <div class="card card-recipeList">
+                            <div class="card-header d-flex justify-content-between">
+                                <span class="recipeList_titleCard">{{ recipe.title }}</span>
+                                <span class="recipeList_categoryCard">{{ recipe.category.name|capitalize }}</span>
+                            </div>
+                            <img class="card-img-top" src="https://picsum.photos/400/300" alt="{{ recipe.title }}">
                         </div>
-                        <img class="card-img-top" src="https://picsum.photos/400/300" alt="{{ recipe.title }}">
-                        <div class="card-body d-flex flex-column justify-content-between">
-                            <small class="recipeList_publishedAtCard">Publiée le {{ recipe.publishedAt|date("d/m/Y") }}</small>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <a class="recipeList_linkCard" href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
-                            <a class="recipeList_linkCard" href="{{ path('blog_update', { id: recipe.id }) }}">Modifier</a>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             {% endfor %}
 
