Mise en place de l'éditeur Wysiwig CKEditor pour réaliser le texte du contenu des recettes

--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -47,7 +47,7 @@
                         <br/>
                         <div class="col-lg-10 offset-lg-1">
                             <h3>Préparation :</h3>
-                            <p class="read-content">{{ recipe.content }}</p>
+                            <p class="read-content">{{ recipe.content | raw }}</p>
                         </div>
                     </div>
                 </div>
