--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -4,7 +4,7 @@
 
     <br/>
 
-    {% for message in app.flashes('message') %}
+    {% for message in app.flashes('recipeDelete') %}
         <div class="col-lg-6 offset-lg-3 alert alert-warning" role="alert">
             {{ message }}
             <button type="button" class="offset-lg-8 btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
