--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -3,7 +3,7 @@
 {% block readRecipe %}
     <br/>
 
-    {% for message in app.flashes('message') %}
+    {% for message in app.flashes('recipeSuccess') %}
         <div class="col-lg-6 offset-lg-3 alert alert-success" role="alert">
             {{ message }}
             <button type="button" class="offset-lg-8 btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
