--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -11,6 +11,13 @@
         </div>
     {% endfor %}
 
+    {% for message in app.flashes('registration') %}
+        <div class="col-lg-6 offset-lg-3 alert alert-success" role="alert">
+            {{ message }}
+            <button type="button" class="offset-lg-8 btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+
     <div class="col-lg-10 offset-lg-1">
         <div class="container">
             <h1>Les Recettes</h1>
